added rings API
