# src/app.js
@@ -12,6 +12,7 @@ import ivrRoutes from './routes/ivr.routes.js';
 import testRoutes from './routes/test.routes.js';
 import voiceRoutes from './routes/voice.routes.js';
 import ttsInfoRoutes from './routes/ttsInfo.routes.js';
+import ringGroupRoutes from './routes/ringgroup.routes.js';
 import { startARIClient } from './ari/ariClient.js';
 
 const app = express();
@@ -27,6 +28,7 @@ app.use('/api/freepbx', freepbxRoutes);
 app.use('/api/ivrs', ivrRoutes);
 app.use('/api/voice', voiceRoutes);
 app.use('/api/tts', ttsInfoRoutes);
+app.use('/api/ringgroups', ringGroupRoutes)
 app.use('/api', testRoutes);
 
 // Swagger Docs
